--- a/Indexsearch/New Story.storyboard
+++ b/Indexsearch/New Story.storyboard
@@ -7,13 +7,13 @@
         <!--Search Table View Controller-->
         <scene sceneID="Fcz-Pr-t8o">
             <objects>
-                <tableViewController id="eFZ-DJ-HQX" customClass="SearchTableViewController" customModule="Indexsearch" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="searchTableViewController" id="eFZ-DJ-HQX" customClass="SearchTableViewController" customModule="Indexsearch" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xDE-5w-Xlh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchCell" textLabel="48y-Qn-P7i" detailTextLabel="D7W-XT-jNz" style="IBUITableViewCellStyleSubtitle" id="lrL-2E-X7l">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="something" textLabel="48y-Qn-P7i" detailTextLabel="D7W-XT-jNz" style="IBUITableViewCellStyleSubtitle" id="lrL-2E-X7l">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lrL-2E-X7l" id="Utl-jd-cgL">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -34,19 +34,12 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="eFZ-DJ-HQX" id="I6k-Xa-EnQ"/>
-                            <outlet property="delegate" destination="eFZ-DJ-HQX" id="KDT-cI-hLs"/>
-                        </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="3Ra-p2-9fV"/>
-                    <connections>
-                        <outlet property="tableviews" destination="xDE-5w-Xlh" id="5jD-n7-VmM"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wzr-PV-jqI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1313" y="1128"/>
+            <point key="canvasLocation" x="1107" y="1114"/>
         </scene>
         <!--List Table View Controller-->
         <scene sceneID="8Ue-bf-zwC">
@@ -57,7 +50,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="aCell" id="szP-iR-BOi">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listCell" id="szP-iR-BOi">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="szP-iR-BOi" id="1Rg-4H-CDA">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -65,15 +58,15 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="kFq-bT-Ul9" id="HHS-MU-SkX"/>
-                            <outlet property="delegate" destination="kFq-bT-Ul9" id="HCd-X7-mtz"/>
+                            <outlet property="dataSource" destination="kFq-bT-Ul9" id="Hvn-kE-kmQ"/>
+                            <outlet property="delegate" destination="kFq-bT-Ul9" id="v7K-Di-eWD"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="HlX-kd-h6S"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xdz-mN-ioL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1313" y="447"/>
+            <point key="canvasLocation" x="1115" y="447"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xz9-XP-tBU">
@@ -86,7 +79,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="kFq-bT-Ul9" kind="relationship" relationship="rootViewController" id="ots-YL-Exb"/>
+                        <segue destination="kFq-bT-Ul9" kind="relationship" relationship="rootViewController" id="BwN-xa-ey5"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8qg-hS-aMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
